--- a/index.html
+++ b/index.html
@@ -1,1 +1,39 @@
-<p>he</p>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <link href="style.css" rel="stylesheet" >
+
+    <meta charset="UTF-8">
+    <title>Basic HTML Structure</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+</head>
+<body>
+    <header>
+        <h1>Welcome to My Basic Website</h1>
+    </header>
+    <div class="box">
+        <div id="box2" >A1</div>
+        <div id="box3" >A2</div>
+        <div id="box4" >A3</div>
+        <div id="box5" >A4</div>
+        <div id="box6" >A5</div>
+
+    </div>
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">About</a></li>
+            <li><a href="#">Contact</a></li>
+        </ul>
+    </nav>
+    <main>
+        <section>
+            <h2>About This Site</h2>
+            <p>This is a basic HTML5 website structure template.</p>
+        </section>
+    </main>
+    <footer>
+        <p>&copy; 2025 My Website</p>
+    </footer>
+</body>
+</html>
